# mkpass

./: Cargo.toml  README.md
dictionaries/: LICENSE.txt  hex.txt  koremutake.txt
src/: dice.rs  main.rs
