[package]
name = "mkpass"
version = "0.3.0"
authors = ["Thomas Hurst <tom@hur.st>"]
edition = "2018"

[dependencies]
rand = { version = "0.8", features = ["getrandom"], default_features = false }
lazy_static = "1.4"
clap = { version = "4.1.6", features = ["derive"] }
eyre = "0.6.8"
read-restrict = "0.3.0"
