[package]
name = "mkpass"
version = "0.4.0"
authors = ["Thomas Hurst <tom@hur.st>"]
edition = "2018"

[dependencies]
rand = { version = "0.8", features = ["getrandom"], default_features = false }
clap = { version = "4.1.6", features = ["derive", "wrap_help"] }
eyre = "0.6.8"
read-restrict = "0.3.0"
ibig = { version = "0.3.6", default-features = false, features = ["num-traits", "std"] }
rustyline = { version = "11.0.0", default-features = false }

[profile.release]
lto = "fat"

[profile.test]
opt-level = 1
